# ChangeLog for dev-perl/perltidy
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.36 2008/08/01 08:26:30 tove Exp $

  01 Aug 2008; Torsten Veller <tove@gentoo.org> -perltidy-20031021.ebuild,
  -perltidy-20060719.ebuild, -perltidy-20070424.ebuild:
  Cleanup

*perltidy-20071205 (01 Aug 2008)

  01 Aug 2008; Torsten Veller <tove@gentoo.org> +perltidy-20071205.ebuild:
  Version bump

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> perltidy-20070508.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perltidy-20070508.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> perltidy-20070508.ebuild:
  alpha/ia64/x86 stable

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  perltidy-20070508.ebuild:
  Marking sparc stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  perltidy-20070424.ebuild:
  Marking sparc stable

*perltidy-20070508 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +perltidy-20070508.ebuild:
  Version bump

*perltidy-20070424 (28 Apr 2007)

  28 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +perltidy-20070424.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> perltidy-20060719.ebuild:
  Stable on x86, bug #169152.

  04 Mar 2007; Marius Mauch <genone@gentoo.org> perltidy-20060719.ebuild:
  Replacing einfo with elog

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  perltidy-20060719.ebuild:
  ppc stable

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> perltidy-20060719.ebuild:
  Mark 20060719 stable on ia64

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perltidy-20020425.ebuild, -perltidy-20020425-r1.ebuild,
  perltidy-20031021.ebuild, -perltidy-20060614.ebuild,
  perltidy-20060719.ebuild:
  Marking amd64, sparc stable; cleaning up ebuilds

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>