@@ -1,6 +1,6 @@
 DIST Perl-Tidy-20070508.tar.gz 363515 RMD160 138b36b097cf6a4c669f1e9d92a9659a0e651f5e SHA1 9bbea2181e8dcf69744eca20bf5b7254de5c55e6 SHA256 422270edb1ec20b2f73cd3d88024677a8e22a2f7dba9aefd6abe8f0bd3610a43
 DIST Perl-Tidy-20071205.tar.gz 376719 RMD160 cb82efeae11d71b9651b5d315617ea3c48958843 SHA1 833c30e436e1a1d091ccc518696843a28a284ae7 SHA256 e51e32c0a8de81a3a885fb7fb901601989e84714667b0eef47bbae55adb4dd95
 EBUILD perltidy-20070508.ebuild 711 RMD160 96258f58f22270f73d889979362665d422ae89d6 SHA1 5d5ec7160b9264080b29b9101212da3231b66645 SHA256 ca5e6ee2b9012c89f9d2795d525f15c6eeff8ed8a87eb95e55493362c246af0f
-EBUILD perltidy-20071205.ebuild 715 RMD160 2c3773fba7dff58ebc3e0896e149139f0af3dd5c SHA1 c8ff6c4e9a251d89fa960da22e295d4595170ee1 SHA256 c1864ba23a9377479991b81681d68e650950fdbb10c9a13a43132cfd6fde8d0d
-MISC ChangeLog 4097 RMD160 120dcf8bac241289bea4cb4684ec165f79d60682 SHA1 b3c5e0a3f00f377afc25c4b04bb57cca2363f8ef SHA256 eaba3a6c58fa5cc14dc68f8504a14d54a49f91e00c5743c8750c2d9cec1100f4
+EBUILD perltidy-20071205.ebuild 649 RMD160 b33d6514ac8765ced2538e8f8242c8a3f05d8b6d SHA1 4bb0346cddf90176e70a72811441742cb2533eeb SHA256 31b9abba6ae9b3acb215fb148d4d308d79e884197bda6ee99cdc775ae99b0425
+MISC ChangeLog 4424 RMD160 e4c77c16d961568d4f9c62366bd8d2c7225d655e SHA1 fe77e6757b600770d4a4c75f85ad558677ff2fbb SHA256 418231bc6a8e4fad2b0e0630ee745c000701dec4bf2247800f4f65481ad2190f
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
