@@ -1,28 +1,27 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/perltidy-20071205.ebuild,v 1.2 2008/08/01 23:19:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/perltidy-20071205.ebuild,v 1.5 2009/03/09 23:26:19 fmccor Exp $
 
-EAPI="prefix"
+EAPI="prefix 2"
 
+MY_PN=Perl-Tidy
+MY_P=${MY_PN}-${PV}
+MODULE_AUTHOR=SHANCOCK
 inherit perl-module
 
-S=${WORKDIR}/${P/perltidy/Perl-Tidy}
 DESCRIPTION="Perl script indenter and beautifier."
 HOMEPAGE="http://perltidy.sourceforge.net/"
-SRC_URI="mirror://sourceforge/perltidy/${P/perltidy/Perl-Tidy}.tar.gz"
 
-SLOT="0"
 LICENSE="GPL-2"
+SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris"
 IUSE=""
 
-DEPEND="dev-lang/perl"
+S=${WORKDIR}/${MY_P}
 
 SRC_TEST="do"
-
 mydoc="examples/*"
-mymake="/usr"
 
 pkg_postinst() {
-	elog "Example scripts can be found in /usr/share/doc/${P}"
+	elog "Example scripts can be found in /usr/share/doc/${PF}"
 }
